demos/grpc/record-server/kube/overlays/prod/ingress-host.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: presentation-server
spec:
  rules:
  - host: apps.v2tools.com
    http:
      paths:
      - path: /presentations/api/(.*)
        backend:
          serviceName: presentation-server
          servicePort: grpc-web
  tls:
  - hosts:
    - apps.v2tools.com
    secretName: apps-v2tools-crt
